# doodler-generator

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  routes.py  run.py
src/controllers/: idea_controller.py
src/models/: api.py  idea.py
src/services/: abstract_idea_service.py  local_idea_service.py  remote_idea_service.py  service_mode.py
tests/: test_app.py  test_run.py
tests/controllers/: test_idea_controller.py
tests/services/: test_local_idea_service.py
