
[project]
name = "doodler-generator"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    "dotenv==0.9.9",
    "Flask==3.1.0",
    "flask-cors==5.0.1",
    "requests==2.32.3",
    
    "accelerate==1.4.0",
    "torch==2.6.0",
    "transformers==4.49.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
